unfininshed pages done

--- a/website/index.html
+++ b/website/index.html
@@ -38,10 +38,10 @@ ul.task-list li input[type="checkbox"] {
 <script src="site_libs/quarto-html/tippy.umd.min.js"></script>
 <script src="site_libs/quarto-html/anchor.min.js"></script>
 <link href="site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<link href="site_libs/quarto-html/quarto-syntax-highlighting-dark.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<link href="site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="dark">
 <script id="quarto-search-options" type="application/json">{
   "location": "navbar",
   "copy-button": false,
@@ -258,12 +258,52 @@ ul.task-list li input[type="checkbox"] {
 </div>
 <div id="listing-listings" class="quarto-listing quarto-listing-container-grid">
 <div class="list grid quarto-listing-cols-3">
-<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1714955588309" data-listing-reading-time-sort="15" data-listing-word-count-sort="2889">
+<div class="g-col-1" data-index="0" data-listing-file-modified-sort="1714959085272" data-listing-reading-time-sort="6" data-listing-word-count-sort="1092">
+<a href="./models/clustering.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title" data-anchor-id="home">
+Clustering
+</h5>
+<div class="card-text listing-description">
+Clustering is a fundamental unsupervised learning technique in machine learning that involves grouping similar data points together based on certain features or…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1714957321291" data-listing-reading-time-sort="7" data-listing-word-count-sort="1341">
+<a href="./models/pca.html" class="quarto-grid-link">
+<div class="quarto-grid-item card h-100 card-left">
+<p class="card-img-top"><img src="images\pca_ex1.jpeg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
+<div class="card-body post-contents">
+<h5 class="no-anchor card-title listing-title">
+PCA and SVD
+</h5>
+<div class="card-text listing-description">
+Principal Component Analysis (PCA) is a dimensionality reduction technique commonly used in data analysis and ML. At its core, PCA aims to transform high-dimensional data…
+</div>
+<div class="card-attribution card-text-small start">
+<div class="listing-author">
+
+</div>
+</div>
+</div>
+</div>
+</a>
+</div>
+<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1714955588309" data-listing-reading-time-sort="15" data-listing-word-count-sort="2889">
 <a href="./models/nn.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\nn.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
 <div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title" data-anchor-id="home">
+<h5 class="no-anchor card-title listing-title">
 Neural Networks
 </h5>
 <div class="card-text listing-description">
@@ -278,7 +318,7 @@ Neural networks are machine learning models inspired by the brain’s neural str
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="1" data-listing-file-modified-sort="1714848180000" data-listing-reading-time-sort="7" data-listing-word-count-sort="1211">
+<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1714848180000" data-listing-reading-time-sort="7" data-listing-word-count-sort="1211">
 <a href="./models/regression.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\lr.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -298,7 +338,7 @@ Linear regression is a statistical method used to model the relationship between
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="2" data-listing-file-modified-sort="1714453436000" data-listing-reading-time-sort="14" data-listing-word-count-sort="2661">
+<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1714453436000" data-listing-reading-time-sort="14" data-listing-word-count-sort="2661">
 <a href="./models/svm.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\svm_1.png" alt="Example SVM" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -318,7 +358,7 @@ Support Vector Machines (SVMs) are a type of supervised learning model used for 
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="3" data-listing-file-modified-sort="1713820672000" data-listing-reading-time-sort="5" data-listing-word-count-sort="996">
+<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1713820672000" data-listing-reading-time-sort="5" data-listing-word-count-sort="996">
 <a href="./intro.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\amazon_screenshot.png" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -338,7 +378,7 @@ In today’s digital landscape dominated by e-commerce giants such as Amazon, th
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="4" data-listing-file-modified-sort="1713341428000" data-listing-reading-time-sort="15" data-listing-word-count-sort="2830">
+<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1713341428000" data-listing-reading-time-sort="15" data-listing-word-count-sort="2830">
 <a href="./models/dtrees.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\dt_1.jpg" alt="Decision tree structure" style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -358,7 +398,7 @@ Decision trees are a popular supervised learning algorithm used for both classif
 </div>
 </a>
 </div>
-<div class="g-col-1" data-index="5" data-listing-file-modified-sort="1713336948000" data-listing-reading-time-sort="11" data-listing-word-count-sort="2052">
+<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1713336948000" data-listing-reading-time-sort="11" data-listing-word-count-sort="2052">
 <a href="./models/bayes.html" class="quarto-grid-link">
 <div class="quarto-grid-item card h-100 card-left">
 <p class="card-img-top"><img src="images\nb.jpg" alt="How Naive Bayes classifies categories." style="height: 150px;"  class="thumbnail-image card-img"/></p>
@@ -368,46 +408,6 @@ Naive Bayes
 </h5>
 <div class="card-text listing-description">
 Naive Bayes is a popular and simple probabilistic machine learning algorithm based on Bayes’ theorem. It is commonly used for classification tasks, such as spam email…
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="6" data-listing-file-modified-sort="1709527777000" data-listing-reading-time-sort="5" data-listing-word-count-sort="998">
-<a href="./models/pca.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<p class="card-img-top"><img src="images\pca_ex1.jpeg" style="height: 150px;"  class="thumbnail-image card-img"/></p>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-PCA and SVD
-</h5>
-<div class="card-text listing-description">
-Where Principal Component Analysis and Singular Value Decomposition are used, for dimensionality reduction and EDA.
-</div>
-<div class="card-attribution card-text-small start">
-<div class="listing-author">
-
-</div>
-</div>
-</div>
-</div>
-</a>
-</div>
-<div class="g-col-1" data-index="7" data-listing-file-modified-sort="1709524287000" data-listing-reading-time-sort="4" data-listing-word-count-sort="616">
-<a href="./models/clustering.html" class="quarto-grid-link">
-<div class="quarto-grid-item card h-100 card-left">
-<div class="listing-item-img-placeholder card-img-top" style="height: 150px;">&nbsp;</div>
-<div class="card-body post-contents">
-<h5 class="no-anchor card-title listing-title">
-Clustering
-</h5>
-<div class="card-text listing-description">
-Clustering in order to discover patterns in the data.
 </div>
 <div class="card-attribution card-text-small start">
 <div class="listing-author">
