--- a/website/models/regression.html
+++ b/website/models/regression.html
@@ -37,10 +37,10 @@ ul.task-list li input[type="checkbox"] {
 <script src="../site_libs/quarto-html/tippy.umd.min.js"></script>
 <script src="../site_libs/quarto-html/anchor.min.js"></script>
 <link href="../site_libs/quarto-html/tippy.css" rel="stylesheet">
-<link href="../site_libs/quarto-html/quarto-syntax-highlighting.css" rel="stylesheet" id="quarto-text-highlighting-styles">
+<link href="../site_libs/quarto-html/quarto-syntax-highlighting-dark.css" rel="stylesheet" id="quarto-text-highlighting-styles">
 <script src="../site_libs/bootstrap/bootstrap.min.js"></script>
 <link href="../site_libs/bootstrap/bootstrap-icons.css" rel="stylesheet">
-<link href="../site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="light">
+<link href="../site_libs/bootstrap/bootstrap.min.css" rel="stylesheet" id="quarto-bootstrap" data-mode="dark">
 <script src="../site_libs/quarto-contrib/glightbox/glightbox.min.js"></script>
 <link href="../site_libs/quarto-contrib/glightbox/glightbox.min.css" rel="stylesheet">
 <link href="../site_libs/quarto-contrib/glightbox/lightbox.css" rel="stylesheet">
@@ -275,7 +275,7 @@ ul.task-list li input[type="checkbox"] {
 <div id="fig-splom" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-splom-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/lr_splom.png" class="lightbox" data-description="Figure&nbsp;1: Splom of all the numerical variables in the dataset." data-gallery="quarto-lightbox-gallery-2"><img src="../images/lr_splom.png" class="img-fluid figure-img"></a>
+<a href="../images/lr_splom.png" class="lightbox" data-gallery="quarto-lightbox-gallery-2" data-description="Figure&nbsp;1: Splom of all the numerical variables in the dataset."><img src="../images/lr_splom.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-splom-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;1: Splom of all the numerical variables in the dataset.
@@ -378,7 +378,7 @@ Table&nbsp;1: A sample of the data used for the linear regression modeling. <cod
 <div id="fig-lrplot" class="quarto-figure quarto-figure-center anchored">
 <figure class="quarto-float quarto-float-fig figure">
 <div aria-describedby="fig-lrplot-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
-<a href="../images/lr_plot.png" class="lightbox" data-description="Figure&nbsp;2: The original data, with the fitted linear regression line plotted over." data-gallery="quarto-lightbox-gallery-4"><img src="../images/lr_plot.png" class="img-fluid figure-img"></a>
+<a href="../images/lr_plot.png" class="lightbox" data-gallery="quarto-lightbox-gallery-4" data-description="Figure&nbsp;2: The original data, with the fitted linear regression line plotted over."><img src="../images/lr_plot.png" class="img-fluid figure-img"></a>
 </div>
 <figcaption class="quarto-float-caption-bottom quarto-float-caption quarto-float-fig" id="fig-lrplot-caption-0ceaefa1-69ba-4598-a22c-09a6ac19f8ca">
 Figure&nbsp;2: The original data, with the fitted linear regression line plotted over.
@@ -854,7 +854,7 @@ window.document.addEventListener("DOMContentLoaded", function (event) {
   </div>
 </nav>
 </div> <!-- /content -->
-<script>var lightboxQuarto = GLightbox({"closeEffect":"zoom","loop":false,"descPosition":"bottom","selector":".lightbox","openEffect":"zoom"});</script>
+<script>var lightboxQuarto = GLightbox({"openEffect":"zoom","descPosition":"bottom","closeEffect":"zoom","selector":".lightbox","loop":false});</script>
 
 
 
